Fix a broken CSS transition

--- a/layout/style.css
+++ b/layout/style.css
@@ -498,6 +498,10 @@ a:hover #home-link {
 	transition: bottom .3s ease;
 }
 
+.last-news:hover .last-news-img-bar {
+	bottom: 0;
+}
+
 .last-news-img img {
 	width: 100%;
 	height: 100%;
